# Constrained_SQL_RAG

./: .gitignore  README.md  mid_decoder_egd_results.jsonl  prompts.jsonl  pyproject.toml  questions_used.jsonl  requirements.txt  schema.json  sqlcoder_egd_results.jsonl  sqlcoder_gbnf_results.jsonl  sqlcoder_lora_results.jsonl  sqlcoder_results.jsonl
outputs/extra_copy/checkpoint-800/: README.md  adapter_config.json  rng_state.pth  scheduler.pt  special_tokens_map.json  tokenizer_config.json  trainer_state.json
results/: grammar_failure_indices.txt  grammar_failure_indices2.txt  pipeline_eval.jsonl  pipeline_eval_grammar_rerun.jsonl  pipeline_eval_grammar_rerun2.jsonl
scripts/: eval_full_pipeline.py  eval_gbnf_pipeline.py  eval_table_retrieval.py  query_tables.py  rerun_grammar_failures.py
src/: config.py  create_schema_json.py  download_spider.py  eval_egd_mid_decoder.py  eval_gbnf_egd.py  eval_sqlcoder.py  eval_sqlcoder_egd.py  eval_sqlcoder_egd_medium.py  eval_sqlcoder_gbnf.py  eval_sqlcoder_lora.py  eval_sqlcoder_lora_egd_mid.py  eval_sqlcoder_lora_gbnf.py  schema_to_prompt.py  sql_gbnf.py  train_sqlcoder_lora.py  visualize_spider.py
src/execution_guidance/: egd_utils.py  generators.py  mid_egd_beam_search.py  schema_checks.py
src/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py
src/sql/grammars/: sqlite.gbnf
src/sql_grammar/: sqlite.gbnf
src/table_retrieval/: __init__.py  retriever.py  schema_formatting.py  schemas.py
src/test_scripts/: build_example_schema.py  test_sqlcoder.py  visualize_spider.py
